--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,21 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span class="logo">Tweeter</span>
-      <p>Write a new tweet <i class="fas fa-angle-double-down"></i></p>
+      <span class="dropDown">
+        <p id="blurb"><b>Write</b> a new tweet</p>
+        <i class="fas fa-angle-double-down"></i>
+      </span>
     </nav>
+
+    <header>
+      <div>
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2>Your Name</h2>
+      </div>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
