--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
     <!-- Adding CSS specific to Header -->
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
+    <!-- Adding CSS specific to tweete form -->
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
