--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <!-- Adding CSS specific to Header -->
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
-    <!-- Adding CSS specific to tweete form -->
+    <!-- Adding CSS specific to tweet form -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
     <!-- External JS -->
@@ -29,6 +29,9 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+
+    <!-- Adding Counter JS -->
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
