--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
     <!-- Adding CSS specific to tweet form -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
+    <!-- Adding CSS specific to tweet timeline-->
+    <link rel="stylesheet" href="/styles/tweet-layout.css" type="text/css" />
+
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -67,6 +70,22 @@
           </div>
         </form>
       </section>
+
+      <article class="tweet">
+        <header>
+          <img src="/images/profile-hex.png"> 
+          <h4>Jane Doe</h4>
+        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, quos, voluptatem culpa asperiores rerum, necessitatibus mollitia deserunt sit earum tenetur sequi reprehenderit et aliquam possimus sunt quae provident eum? Omnis.</p>
+        <footer>
+          <sub>10 days ago</sub>
+          <div class="tweeticons">
+            <i class="fa-solid fa-flag"></i>
+            <i class="fa-solid fa-retweet"></i>
+            <i class="fa-solid fa-heart"></i>
+          </div>
+        </footer>
+      </article>
     </main>
   </body>
 </html>
