--- a/public/index.html
+++ b/public/index.html
@@ -71,21 +71,10 @@
         </form>
       </section>
 
-      <article class="tweet">
-        <header>
-          <img src="/images/profile-hex.png"> 
-          <h4>Jane Doe</h4>
-        </header>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, quos, voluptatem culpa asperiores rerum, necessitatibus mollitia deserunt sit earum tenetur sequi reprehenderit et aliquam possimus sunt quae provident eum? Omnis.</p>
-        <footer>
-          <sub>10 days ago</sub>
-          <div class="tweeticons">
-            <i class="fa-solid fa-flag"></i>
-            <i class="fa-solid fa-retweet"></i>
-            <i class="fa-solid fa-heart"></i>
-          </div>
-        </footer>
-      </article>
+<section id="tweets-container">
+  
     </main>
   </body>
 </html>
+
+
