changed error messages

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <div id="error-message"></div>
+        <div class="error-message"></div>
         <h2>Compose Tweet</h2>
         <form id="tweet-form" action="/tweets" method="POST">
           <label for="tweet-text">What are you humming about?</label>
